Fix all Ruff linting errors
- Fix bare except clause in pdfnet_cli.py
- Add missing 'Any' import in typed_losses.py
- Fix multiple statements on one line in utils.py
- Replace star imports with explicit imports in __init__.py files
- Reorganize imports in demo.ipynb for proper order

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -32,24 +32,29 @@
    ],
    "source": [
     "# Setup and imports\n",
+    "# Standard library imports\n",
     "import sys\n",
+    "import argparse\n",
     "from pathlib import Path\n",
     "\n",
-    "project_root = Path.cwd()\n",
-    "if str(project_root) not in sys.path:\n",
-    "    sys.path.insert(0, str(project_root))\n",
-    "\n",
-    "from src.pdfnet.models.PDFNet import build_model\n",
+    "# Third-party imports  \n",
     "import torch\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import argparse\n",
-    "from src.pdfnet.args import get_args_parser\n",
     "import ttach as tta\n",
     "from torch.amp.autocast_mode import autocast\n",
     "from torchvision.transforms.functional import normalize\n",
     "from moge.model.v2 import MoGeModel\n",
+    "\n",
+    "# Add project root to Python path to ensure imports work\n",
+    "project_root = Path.cwd()\n",
+    "if str(project_root) not in sys.path:\n",
+    "    sys.path.insert(0, str(project_root))\n",
+    "\n",
+    "# Local imports (after path setup)\n",
+    "from src.pdfnet.models.PDFNet import build_model\n",
+    "from src.pdfnet.args import get_args_parser\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n"
@@ -568,7 +573,7 @@
     "            torch.cuda.synchronize()\n",
     "\n",
     "        start_time = time.time()\n",
-    "        result = run_standard()\n",
+    "        run_standard()\n",
     "\n",
     "        if torch.cuda.is_available():\n",
     "            torch.cuda.synchronize()\n",
@@ -618,7 +623,7 @@
     "            torch.cuda.synchronize()\n",
     "\n",
     "        start_time = time.time()\n",
-    "        result = run_tta()\n",
+    "        run_tta()\n",
     "\n",
     "        if torch.cuda.is_available():\n",
     "            torch.cuda.synchronize()\n",
@@ -1315,7 +1320,7 @@
     "            start_time = time.time()\n",
     "\n",
     "            if use_tta:\n",
-    "                result = run_pdfnet_batch_inference(\n",
+    "                run_pdfnet_batch_inference(\n",
     "                    image_batch, depth_batch, model, device, use_tta=True\n",
     "                )\n",
     "            else:\n",
@@ -1323,7 +1328,7 @@
     "                    with autocast(\n",
     "                        enabled=torch.cuda.is_available(), device_type=\"cuda\"\n",
     "                    ):\n",
-    "                        result = model.inference(image_batch, depth_batch)\n",
+    "                        model.inference(image_batch, depth_batch)\n",
     "\n",
     "            if torch.cuda.is_available():\n",
     "                torch.cuda.synchronize()\n",
@@ -1365,7 +1370,7 @@
     "            # Process images individually\n",
     "            for _ in range(batch_size):\n",
     "                if use_tta:\n",
-    "                    result = run_pdfnet_inference_with_tta(\n",
+    "                    run_pdfnet_inference_with_tta(\n",
     "                        model, img_tensor, depth_tensor, device, use_tta=True\n",
     "                    )\n",
     "                else:\n",
@@ -1373,7 +1378,7 @@
     "                        with autocast(\n",
     "                            enabled=torch.cuda.is_available(), device_type=\"cuda\"\n",
     "                        ):\n",
-    "                            result = model.inference(img_tensor, depth_tensor)\n",
+    "                            model.inference(img_tensor, depth_tensor)\n",
     "\n",
     "            if torch.cuda.is_available():\n",
     "                torch.cuda.synchronize()\n",
