Complete linting fixes: add __all__ exports and suppress necessary E402 warnings

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -53,8 +53,8 @@
     "    sys.path.insert(0, str(project_root))\n",
     "\n",
     "# Local imports (after path setup)\n",
-    "from src.pdfnet.models.PDFNet import build_model\n",
-    "from src.pdfnet.args import get_args_parser\n",
+    "from src.pdfnet.models.PDFNet import build_model  # noqa: E402\n",
+    "from src.pdfnet.args import get_args_parser  # noqa: E402\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n"
